Remove apache-http use from wifi passpoint code.
Apart from the various open questions about turning of
hostname verification etc, the only big TODO here is how
we should deal with HTTP authentication. It isn't clear what
the spec or standards expect. Basic auth is already supported,
but Digest auth needs a little bit of work to support out of
the box.

bug: 18027885

Change-Id: Ia696ac4e85f8e55e3b9b12310411a7f6639f94ad